--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Remove cards from your twitter feed</h1>
 
-<p><a href="javascript:var cards = document.querySelectorAll('.js-adaptive-media-container,.js-media-container');Array.from(cards).forEach(function(c) { c.remove() });)">twitclean</a>/p>
+<p><a href="javascript:var cards = document.querySelectorAll('.js-adaptive-media-container,.js-media-container');Array.from(cards).forEach(function(c) { c.remove() });)">twitclean</a></p>
